force-app/main/default/objects/payments_Object__c/payments_Object__c.object-meta.xml
<CustomObject>
    <label>payments Object</label>
    <nameField>
        <displayFormat>PID-{0000}</displayFormat>
        <label>payments Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>payments Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>