force-app/main/default/objects/payments_Object__c/fields/Life_Insurence__c.field-meta.xml
<CustomField>
    <fullName>Life_Insurence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Life Insurence</label>
    <referenceTo>Life_Insurence__c</referenceTo>
    <relationshipLabel>payments Objects</relationshipLabel>
    <relationshipName>payments_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>