force-app/main/default/objects/payments_Object__c/fields/Motor_Insurence__c.field-meta.xml
<CustomField>
    <fullName>Motor_Insurence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Motor Insurence</label>
    <referenceTo>Motor_Insurence__c</referenceTo>
    <relationshipLabel>payments Objects</relationshipLabel>
    <relationshipName>payments_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>