force-app/main/default/objects/payments_Object__c/fields/paid_Date__c.field-meta.xml
<CustomField>
    <fullName>paid_Date__c</fullName>
    <label>paid Date</label>
    <type>Date</type>
</CustomField>