force-app/main/default/objects/payments_Object__c/fields/Premium_Amount__c.field-meta.xml
<CustomField>
    <fullName>Premium_Amount__c</fullName>
    <label>Premium Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>